--- a/games/Pick2GelottoMax20.yml
+++ b/games/Pick2GelottoMax20.yml
@@ -2,15 +2,15 @@
 ## -------------------------------------------------------------------------
 
 # the number of numbers in a ticket:
-n: 5
+n: 2
 
 
 # the smallest and largest possible values for numbers:
 min: 0
-max: 40
+max: 9
 
 # price of a ticket:
-price: 100
+price: 20
 
 
 # minimum balance to keep in the pot at all times, which is back-filled by the
@@ -20,7 +20,7 @@ min_pot: 0
 
 # the number of additional tickets needed to step up payout amounts (by the
 # amounts defined in `payout_step_sizes`):
-step_up_ticket_count: 100
+step_up_ticket_count: 10000000000
 
 
 # payout_step_sizes associates possible match counts that a winning ticket can
@@ -32,9 +32,8 @@ step_up_ticket_count: 100
 # with the winning numbers receives 300 minimum. If the ticket count increases
 # by a sufficient amount, however, it becomes 600.
 payout_step_sizes:
-    2: 1
-    3: 400
-    4: 7000
+    1: 20
+    2: 500
 
 
 # similar to payout_step_sizes; however, the right-hand side in
@@ -44,27 +43,27 @@ payout_step_sizes:
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
-    5: 1.0
+    1: 0
 
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
 
 # How many lotto rounds should be simulated:
-rounds: 1000
+rounds: 62
 
 
 # lower and upper bounds for the randomness that determines the number of
 # wallets that buy tickets each round:
-min_users: 100
-max_users: 200
+min_users: 50
+max_users: 100
 
 
 # lower and upper bounds for the randomness that determines the number of
 # tickets each user buys in each round:
 min_tickets_per_user: 1
-max_tickets_per_user: 15
+max_tickets_per_user: 45
 
 # if true, then anything left in the lotto's balance, minus the min pot size,
 # will be transfered to the house at the end of each round.
-house_takes_leftovers: false
+house_takes_leftovers: true
