--- a/games/Pick4GelottoMax50.yml
+++ b/games/Pick4GelottoMax50.yml
@@ -2,25 +2,25 @@
 ## -------------------------------------------------------------------------
 
 # the number of numbers in a ticket:
-n: 3
+n: 4
 
 
 # the smallest and largest possible values for numbers:
 min: 0
-max: 20
+max: 30
 
 # price of a ticket:
-price: 30
+price: 50
 
 
 # minimum balance to keep in the pot at all times, which is back-filled by the
 # house when it drops below 0:
-min_pot: 0
+min_pot: 100000
 
 
 # the number of additional tickets needed to step up payout amounts (by the
 # amounts defined in `payout_step_sizes`):
-step_up_ticket_count: 1000000
+step_up_ticket_count: 10000000000
 
 
 # payout_step_sizes associates possible match counts that a winning ticket can
@@ -32,8 +32,8 @@ step_up_ticket_count: 1000000
 # with the winning numbers receives 300 minimum. If the ticket count increases
 # by a sufficient amount, however, it becomes 600.
 payout_step_sizes:
-    2: 1
-    3: 20000
+    2: 50
+    3: 2500
 
 
 # similar to payout_step_sizes; however, the right-hand side in
@@ -43,14 +43,13 @@ payout_step_sizes:
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
-    1: 0
-
+    4: .80
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
 
 # How many lotto rounds should be simulated:
-rounds: 750
+rounds: 90
 
 
 # lower and upper bounds for the randomness that determines the number of
@@ -62,4 +61,8 @@ max_users: 100
 # lower and upper bounds for the randomness that determines the number of
 # tickets each user buys in each round:
 min_tickets_per_user: 1
-max_tickets_per_user: 50
+max_tickets_per_user: 100
+
+# if true, then anything left in the lotto's balance, minus the min pot size,
+# will be transfered to the house at the end of each round.
+house_takes_leftovers: false
