--- a/games/production/pick4.yml
+++ b/games/production/pick4.yml
@@ -2,39 +2,34 @@
 ## -------------------------------------------------------------------------
 
 # the number of numbers in a ticket:
-n: 3
-
+n: 4
 
 # the smallest and largest possible values for numbers:
 min: 0
-max: 20
+max: 30
 
 # price of a ticket:
-price: 30
-
+price: 50
 
 # minimum balance to keep in the pot at all times, which is back-filled by the
 # house when it drops below 0:
-min_pot: 0
-
+min_pot: 80000
 
 # the number of additional tickets needed to step up payout amounts (by the
 # amounts defined in `payout_step_sizes`):
-step_up_ticket_count: 1000000
-
+step_up_ticket_count: 10000000000
 
 # payout_step_sizes associates possible match counts that a winning ticket can
 # have with an "payout step-up" amount. Each time that the number of tickets
 # increases by the amount defined by step_up_ticket_count above, the payout
-# amount for this match count increases by this amount. 
+# amount for this match count increases by this amount.
 #
 # For example, the 3: 300 entry means that a ticket that matches 3 of 5 numbers
 # with the winning numbers receives 300 minimum. If the ticket count increases
 # by a sufficient amount, however, it becomes 600.
 payout_step_sizes:
-    2: 30
-    3: 25000
-
+  2: 1
+  3: 2500
 
 # similar to payout_step_sizes; however, the right-hand side in
 # `payout_pot_percents` represents a percentage of the pot that should be paid
@@ -43,27 +38,24 @@ payout_step_sizes:
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
-    1: 0
-
+  4: .80
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
 
 # How many lotto rounds should be simulated:
-rounds: 31
-
+rounds: 180
 
 # lower and upper bounds for the randomness that determines the number of
 # wallets that buy tickets each round:
-min_users: 50
-max_users: 100
-
+min_users: 100
+max_users: 500
 
 # lower and upper bounds for the randomness that determines the number of
 # tickets each user buys in each round:
 min_tickets_per_user: 1
-max_tickets_per_user: 50
+max_tickets_per_user: 100
 
 # if true, then anything left in the lotto's balance, minus the min pot size,
 # will be transfered to the house at the end of each round.
-house_takes_leftovers: true
+house_takes_leftovers: false
