--- a/games/production/pick5.yml
+++ b/games/production/pick5.yml
@@ -2,39 +2,34 @@
 ## -------------------------------------------------------------------------
 
 # the number of numbers in a ticket:
-n: 4
-
+n: 5
 
 # the smallest and largest possible values for numbers:
 min: 0
-max: 20
+max: 25
 
 # price of a ticket:
-price: 50
-
+price: 100
 
 # minimum balance to keep in the pot at all times, which is back-filled by the
 # house when it drops below 0:
-min_pot: 0
-
+min_pot: 100000
 
 # the number of additional tickets needed to step up payout amounts (by the
 # amounts defined in `payout_step_sizes`):
-step_up_ticket_count: 1000
-
+step_up_ticket_count: 100000000000
 
 # payout_step_sizes associates possible match counts that a winning ticket can
 # have with an "payout step-up" amount. Each time that the number of tickets
 # increases by the amount defined by step_up_ticket_count above, the payout
-# amount for this match count increases by this amount. 
+# amount for this match count increases by this amount.
 #
 # For example, the 3: 300 entry means that a ticket that matches 3 of 5 numbers
 # with the winning numbers receives 300 minimum. If the ticket count increases
 # by a sufficient amount, however, it becomes 600.
 payout_step_sizes:
-    2: 1
-    3: 50
-
+  2: 1
+  3: 500
 
 # similar to payout_step_sizes; however, the right-hand side in
 # `payout_pot_percents` represents a percentage of the pot that should be paid
@@ -43,21 +38,19 @@ payout_step_sizes:
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
-    4: .15
-
+  4: .025
+  5: .88
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
 
 # How many lotto rounds should be simulated:
-rounds: 60
-
+rounds: 300
 
 # lower and upper bounds for the randomness that determines the number of
 # wallets that buy tickets each round:
 min_users: 100
-max_users: 200
-
+max_users: 300
 
 # lower and upper bounds for the randomness that determines the number of
 # tickets each user buys in each round:
