--- a/games/production/pick3long.yml
+++ b/games/production/pick3long.yml
@@ -2,22 +2,22 @@
 ## -------------------------------------------------------------------------
 
 # the number of numbers in a ticket:
-n: 5
+n: 3
 
 # the smallest and largest possible values for numbers:
 min: 0
-max: 40
+max: 60
 
 # price of a ticket:
-price: 10
+price: 5
 
 # minimum balance to keep in the pot at all times, which is back-filled by the
 # house when it drops below 0:
-min_pot: 0
+min_pot: 25000
 
 # the number of additional tickets needed to step up payout amounts (by the
 # amounts defined in `payout_step_sizes`):
-step_up_ticket_count: 100000000000
+step_up_ticket_count: 10000000000
 
 # payout_step_sizes associates possible match counts that a winning ticket can
 # have with an "payout step-up" amount. Each time that the number of tickets
@@ -28,8 +28,9 @@ step_up_ticket_count: 100000000000
 # with the winning numbers receives 300 minimum. If the ticket count increases
 # by a sufficient amount, however, it becomes 600.
 payout_step_sizes:
-  5: 1000000 
+  2: 5
   
+
 # similar to payout_step_sizes; however, the right-hand side in
 # `payout_pot_percents` represents a percentage of the pot that should be paid
 # out. For example, "5: 0.8" means that a ticket with 3 of 5 matching numbers
@@ -37,7 +38,7 @@ payout_step_sizes:
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
- 
+  3: 0.75
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
@@ -47,14 +48,14 @@ rounds: 250
 
 # lower and upper bounds for the randomness that determines the number of
 # wallets that buy tickets each round:
-min_users: 50
-max_users: 100
+min_users: 10
+max_users: 150
 
 # lower and upper bounds for the randomness that determines the number of
 # tickets each user buys in each round:
 min_tickets_per_user: 1
-max_tickets_per_user: 300
+max_tickets_per_user: 250
 
 # if true, then anything left in the lotto's balance, minus the min pot size,
 # will be transfered to the house at the end of each round.
-house_takes_leftovers: true
+house_takes_leftovers: false
