--- a/games/production/pick45new.2.yml
+++ b/games/production/pick45new.2.yml
@@ -6,7 +6,7 @@ n: 5
 
 # the smallest and largest possible values for numbers:
 min: 0
-max: 43
+max: 34
 
 # price of a ticket:
 price: 10
@@ -37,7 +37,6 @@ payout_step_sizes:
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
-  5: 0.25
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
@@ -55,6 +54,6 @@ max_users: 100
 min_tickets_per_user: 1
 max_tickets_per_user: 300
 
-house_take_pct: 0.05
+house_take_pct: 0.10
 
-house_takes_leftovers: false
+house_takes_leftovers: true
