--- a/games/production/pick45new.2.yml
+++ b/games/production/pick45new.2.yml
@@ -6,14 +6,14 @@ n: 5
 
 # the smallest and largest possible values for numbers:
 min: 0
-max: 43
+max: 36
 
 # price of a ticket:
 price: 10
 
 # minimum balance to keep in the pot at all times, which is back-filled by the
 # house when it drops below 0:
-min_pot: 0
+min_pot: 1000000
 
 # the number of additional tickets needed to step up payout amounts (by the
 # amounts defined in `payout_step_sizes`):
@@ -28,7 +28,7 @@ step_up_ticket_count: 100000000000
 # with the winning numbers receives 300 minimum. If the ticket count increases
 # by a sufficient amount, however, it becomes 600.
 payout_step_sizes:
-  5: 1000000
+  5: 0
 
 # similar to payout_step_sizes; however, the right-hand side in
 # `payout_pot_percents` represents a percentage of the pot that should be paid
@@ -37,7 +37,7 @@ payout_step_sizes:
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
-  5: 0.25
+  5: 1
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
@@ -47,14 +47,14 @@ rounds: 250
 
 # lower and upper bounds for the randomness that determines the number of
 # wallets that buy tickets each round:
-min_users: 50
-max_users: 100
+min_users: 5
+max_users: 50
 
 # lower and upper bounds for the randomness that determines the number of
 # tickets each user buys in each round:
 min_tickets_per_user: 1
-max_tickets_per_user: 300
+max_tickets_per_user: 200
 
-house_take_pct: 0.05
+house_take_pct: 0.25
 
 house_takes_leftovers: false
