--- a/games/dev/pick4-2-dg.yml
+++ b/games/dev/pick4-2-dg.yml
@@ -4,7 +4,6 @@
 # the number of numbers in a ticket:
 n: 3
 
-
 # the smallest and largest possible values for numbers:
 min: 0
 max: 90
@@ -12,38 +11,33 @@ max: 90
 # price of a ticket:
 price: 50
 
-
 # minimum balance to keep in the pot at all times, which is back-filled by the
 # house when it drops below 0:
 min_pot: 0
 
-
 # the number of additional tickets needed to step up payout amounts (by the
-# amounts defined in `payout_step_sizes`):
+# amounts defined in `payout_incentives`):
 step_up_ticket_count: 100
 
-
-# payout_step_sizes associates possible match counts that a winning ticket can
+# payout_incentives associates possible match counts that a winning ticket can
 # have with an "payout step-up" amount. Each time that the number of tickets
 # increases by the amount defined by step_up_ticket_count above, the payout
-# amount for this match count increases by this amount. 
+# amount for this match count increases by this amount.
 #
 # For example, the 3: 300 entry means that a ticket that matches 3 of 5 numbers
 # with the winning numbers receives 300 minimum. If the ticket count increases
 # by a sufficient amount, however, it becomes 600.
-payout_step_sizes:
-    2: 200
+payout_incentives:
+  2: 200
 
-
-# similar to payout_step_sizes; however, the right-hand side in
+# similar to payout_incentives; however, the right-hand side in
 # `payout_pot_percents` represents a percentage of the pot that should be paid
 # out. For example, "5: 0.8" means that a ticket with 3 of 5 matching numbers
-# shall receive 80% of the pot size. If this or payout_step_sizes causes the
+# shall receive 80% of the pot size. If this or payout_incentives causes the
 # balance of the lotto go negative, the house pays the difference and backfills
 # the lotto until it's balance is the value defined by `min_pot`.
 payout_pot_percents:
-    3: .75
-
+  3: .75
 
 ## Simulation Settings -----------------------------------------------------
 ## -------------------------------------------------------------------------
@@ -51,12 +45,10 @@ payout_pot_percents:
 # How many lotto rounds should be simulated:
 rounds: 1000
 
-
 # lower and upper bounds for the randomness that determines the number of
 # wallets that buy tickets each round:
 min_users: 100
 max_users: 200
-
 
 # lower and upper bounds for the randomness that determines the number of
 # tickets each user buys in each round:
